Fixed location spacing

--- a/un_project/website/static/css/players_styles.css
+++ b/un_project/website/static/css/players_styles.css
@@ -41,7 +41,7 @@ body {
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     color: white;
     top: 50px;
-    left: 250px;
+    left: 235px;
     font-size: 18px;
     display: inline-block;
     margin: 0;
@@ -53,7 +53,7 @@ body {
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     color: white;
     top: 100px;
-    left: 250px;
+    left: 235px;
     font-size: 18px;
     display: inline-block;
     margin: 0;
